# talkPSX

./: .gitignore  README.md  components.json  drizzle.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ingest.yml
data-pipeline/: api.py  fetch_data.py  get_symbols.py  ingest.py  main.py  pyproject.toml
drizzle/: 0000_yielding_odin.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
evaluation/: main.py  providers.py  pyproject.toml  synthetic_dataset.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/chat/[chatId]/: route.ts
src/app/api/chat/[chatId]/create/: route.ts
src/app/api/chat/[chatId]/delete/: route.ts
src/app/api/chat/[chatId]/get/: route.ts
src/app/api/chat/[chatId]/message/: route.ts
src/app/api/chat/[chatId]/messages/: route.ts
src/app/api/chat/local/: route.ts
src/app/api/chat/message/: route.ts
src/app/api/eval/: route.ts
src/app/api/startup/: route.ts
src/app/api/user/create/: route.ts
src/app/chat/[chatId]/: page.tsx
src/app/components/: About.tsx  AnimatedText.tsx  BentoCard.tsx  ChatComposer.tsx  ChatInterface.tsx  ChatItem.tsx  ChatMessageRow.tsx  DynamicBackground.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HomeShell.tsx  Sidebar.tsx
src/app/db/: schema.ts
src/app/types/: chat.ts
src/components/animate-ui/icons/: icon.tsx
src/lib/: chatProvider.ts  cleanLlmOutput.ts  createEmbeddings.ts  databaseUrlToPgConfig.ts  db.ts  embeddingProvider.ts  generate.ts  hfEmbedding.ts  hfEnv.ts  jinaEmbedding.ts  kse100Symbols.ts  langgraph.ts  liveQuoteDetect.ts  ollamaEmbedding.ts  ollamaEnv.ts  quoteService.ts  smoothScrollTo.ts
src/lib/prompts/: chatSystemPrompt.ts
(+5 files in other folders)
