[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.0",
    "langchain-ollama>=0.3.8",
    "langchain-core>=0.3",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "ragas[metrics]>=0.3.5",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
]
